search bar added

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -55,3 +55,56 @@ button {
 button:hover {
     background-color: rgba((0), 136,169,0.8);
 }
+
+.searchbox {
+    width:  100%;
+    min-height: 100vh;
+    padding: 5%;
+    background-image:  url(images/background.png);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(4px) saturate(180% );
+} 
+
+.search-bar {
+    width: 100%;
+    max-width: 700px;
+    background: rgb(233, 235, 233);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 10px 20px;
+}
+
+.search-bar input{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 24px 20px;
+    font-size: 20px;
+    color :green
+}
+
+::placeholder{
+    color: black;
+}
+
+.search-bar button img{
+
+    width: 25px;
+}
+
+.search-bar button{
+
+    border: 0;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background: #58629b;
+    cursor: pointer;
+
+}
