--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke;     */
 }
 
 li, a, button {
@@ -58,7 +58,7 @@ button:hover {
 
 .searchbox {
     width:  100%;
-    min-height: 100vh;
+    min-height: 51vh;
     padding: 5%;
     background-image:  url(images/background.png);
     background-position: center;
@@ -73,7 +73,7 @@ button:hover {
     width: 100%;
     max-width: 700px;
     background: rgb(233, 235, 233);
-    display: flex;
+    display: inline-flex;
     align-items: center;
     border-radius: 60px;
     padding: 10px 20px;
@@ -104,7 +104,7 @@ button:hover {
     border-radius: 50%;
     width: 60px;
     height: 60px;
-    background: #58629b;
+    background: rgb(70, 252, 70);
     cursor: pointer;
 
 }
